<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="28sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:layout_marginTop="70dp"
            android:layout_marginRight="100dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon"/>

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/splash_icon"
            android:paddingTop="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/home_top_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/iv_icon"/>

        <ImageView
            android:id="@+id/iv_top_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/top_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top_title"/>

        <TextView
            android:id="@+id/tv_bottom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_bottom_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/iv_top_icon"/>

        <ImageView
            android:id="@+id/iv_bottom_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:scaleType="centerInside"
            android:src="@mipmap/bottom_icon"
            android:paddingTop="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bottom_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

