<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_info"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/login_info"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@mipmap/email"
            android:background="@drawable/edit_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@mipmap/password"
            android:drawableRight="@mipmap/eye"
            android:background="@drawable/edit_back"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:src="@mipmap/login_google"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            app:layout_constraintTop_toBottomOf="@id/iv_google"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create now"
            android:textColor="@color/light_blue_600"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_google"
            app:layout_constraintLeft_toRightOf="@id/tv_not_account"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>